# mas-aws

./: .env.example  .gitignore  README.md  bot.py  docker-compose.yml  dockerfile  main.py  pyproject.toml
app/: config.py  db.py  main.py
app/agents/: orchestrator.py  rag.py  text2sql.py
app/models/: schemas.py
app/routers/: api.py
app/services/: dynamodb.py  memory.py  postgres.py  qdrant.py
data/: knowledge_base.md
